[package]
name = "bgstreamscript"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
eyre = "0.6"
clipboard = "0.5.0"
ethers= "1.0.0"
tokio = { version = "1.18", features = ["macros"] }
reqwest = { version = "0.11.14", default-features = false }
ethers-providers = "1.0.2"
serde_json = "1.0.93"
console = "0.15.5"
dotenv = "0.15.0"
dotenv_codegen = "0.14.0"



